--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "lucide-react": "^0.474.0",
     "next": "15.1.6",
     "next-cloudinary": "^6.16.0",
+    "quill": "^2.0.3",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
